# spring_homework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_paths.cmake  Метод цепочек (открытое хеширование).md  Хеш-таблицы. Понятие коллизии.md
.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt
.github/workflows/: clang-format.yaml  clang-tidy-post.yaml  clang-tidy-review.yaml  tests.yaml
THEORY/: theory.md
additional_tasks/: CMakeLists.txt  task1(math).md  task2(dp).md  tasks
additional_tasks/dynamic_programming/: README.md
additional_tasks/heap_exe/: README.md
additional_tasks/template/: CMakeLists.txt
cmake_scripts/: scripts_for_icecream_cpp.cmake
doc/: README.md  topic1(question 6).md  Хеш-таблицы. Понятие коллизии.md
doc/topic1/: question13.md  question5.md  question7.md  question8.md
doc/topic4/: question4.md  question5.md
doc/topic5/: question1.md  question2.md  question4.md  question5.md
doc/topic5(question[1-5])/: topic5(question3).md
heap_exe/: README.md
heap_exe/src/: heap.cpp  heap.hpp  main.cpp
lesson3/: heap.cpp  sorting_algorithms.cpp
lesson5/: search_tree.cpp  search_tree.hpp
lesson7/: hashtables.txt
lib/: CMakeLists.txt
lib/src/: listnode.hpp  treenode.hpp  util.cpp  util.hpp
sandbox/: CMakeLists.txt
sandbox/binary_search_tree/: CMakeLists.txt  README.md
sandbox/binary_search_tree/src/: bst.cpp  bst.hpp  main.cpp  test.cpp  utils.cpp  utils.hpp
sandbox/stack/src/: main.cpp  stack.cpp  stack.hpp  test.cpp
sandbox/template/src/: commit_message.txt  main  main.cpp
task_01/: CMakeLists.txt  README.md
task_01/src/: Searching_sum.cpp  Searching_sum.hpp  get_two_nums.cpp  get_two_nums.hpp  main  main.cpp  search_task.cpp  search_task.hpp  searching_sum.cpp  searching_sum.hpp  solution.h  sum_of_two.cpp  sum_of_two.hpp  summandds_in_array.cpp  summandds_in_array.hpp  task.cpp  task.hpp  test.cpp  test_10_02_2024.txt  topology_sort.cpp  topology_sort.hpp  two_sum.cpp  two_sum.hpp  utilities.hpp  utils.cpp  (+2 more)
task_02/: README.md
task_03/: README.md
task_04/: CMakeLists.txt  README.md
task_05/: README.md
task_06/: README.md
task_07/: CMakeLists.txt  README.md
task_08/: README.md
task_09/: README.md
task_sortings/: README.md
(+179 files in other folders)
